application-set/test-apps/website/personal-website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: personal-website
  name: personal-website
  namespace: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-website
  template:
    metadata:
      labels:
        app: personal-website
    spec:
      containers:
      - name: personal-website
        image: docker.io/bijubayarea/personal-website:v2.0
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 50Mi
      
#      imagePullSecrets:
#      - name: docker-registry-key
