application-set/test-apps/website/personal-website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: website
spec:
  selector:
    app: personal-website
  ports:
      - protocol: TCP
        port: 80
        targetPort: 80
